; ModuleID = '/home/carl/AnghaBench/darwin-xnu/tests/extr_turnstiles_test.c_thread_create_at_qos.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/tests/extr_turnstiles_test.c_thread_create_at_qos.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PRIO_DARWIN_ROLE = common dso_local global i32 0, align 4
@PRIO_DARWIN_ROLE_UI_FOCAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"set priority failed\0A\00", align 1
@.str.1 = private unnamed_addr constant [17 x i8] c"pthread created\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i8* (i8*)*, i32)* @thread_create_at_qos to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @thread_create_at_qos(i64 %0, i8* (i8*)* %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i8* (i8*)*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i8* (i8*)* %1, i8* (i8*)** %5, align 8
  store i32 %2, i32* %6, align 4
  %11 = load i32, i32* @PRIO_DARWIN_ROLE, align 4
  %12 = load i32, i32* @PRIO_DARWIN_ROLE_UI_FOCAL, align 4
  %13 = call i32 @setpriority(i32 %11, i32 0, i32 %12)
  store i32 %13, i32* %10, align 4
  %14 = load i32, i32* %10, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %3
  %17 = call i32 @T_LOG(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  br label %18

18:                                               ; preds = %16, %3
  %19 = call i32 @pthread_attr_init(i32* %9)
  %20 = load i64, i64* %4, align 8
  %21 = call i32 @pthread_attr_set_qos_class_np(i32* %9, i64 %20, i32 0)
  %22 = load i8* (i8*)*, i8* (i8*)** %5, align 8
  %23 = load i32, i32* %6, align 4
  %24 = sext i32 %23 to i64
  %25 = inttoptr i64 %24 to i8*
  %26 = call i32 @pthread_create(i32* %8, i32* %9, i8* (i8*)* %22, i8* %25)
  %27 = call i32 @T_LOG(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0))
  %28 = load i32, i32* %8, align 4
  %29 = call i32 @pthread_get_qos_class_np(i32 %28, i64* %7, i32* null)
  %30 = load i64, i64* %7, align 8
  %31 = load i64, i64* %4, align 8
  %32 = call i32 @T_EXPECT_EQ(i64 %30, i64 %31, i32* null)
  ret void
}

declare dso_local i32 @setpriority(i32, i32, i32) #1

declare dso_local i32 @T_LOG(i8*) #1

declare dso_local i32 @pthread_attr_init(i32*) #1

declare dso_local i32 @pthread_attr_set_qos_class_np(i32*, i64, i32) #1

declare !callback !2 dso_local i32 @pthread_create(i32*, i32*, i8* (i8*)*, i8*) #1

declare dso_local i32 @pthread_get_qos_class_np(i32, i64*, i32*) #1

declare dso_local i32 @T_EXPECT_EQ(i64, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{!3}
!3 = !{i64 2, i64 3, i1 false}
